@@ -17,3 +17,30 @@ Description: Japanese-English Dictionary for GNOME
  tabs, spell checking, kanji handwriting recognition and
  an accompanying console version for searches through
  the terminal.
+
+Package: libwaei1
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Japanese-English Dictionary for GNOME
+ gWaei is an easy to use and yet powerful full-featured
+ dictionary program for Japanese to English translation.
+ It organizes results by relevance, supports regex searches,
+ tabs, spell checking, kanji handwriting recognition and
+ an accompanying console version for searches through
+ the terminal.
+ .
+ This package contains the shared library libwaei.
+
+Package: libwaei-dev
+Section: libdevel
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Japanese-English Dictionary for GNOME
+ gWaei is an easy to use and yet powerful full-featured
+ dictionary program for Japanese to English translation.
+ It organizes results by relevance, supports regex searches,
+ tabs, spell checking, kanji handwriting recognition and
+ an accompanying console version for searches through
+ the terminal.
+ .
+ This package contains the development files.
