@@ -1,0 +1,3 @@
+usr/include
+usr/lib/libwaei*.so
+usr/lib/libwaei*.a
